fix: layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,8 +16,4 @@
   * {
     @apply border-border;
   }
-
-  html {
-    scroll-behavior: smooth;
-  }
 }
